force-app/main/default/objects/Reviewer_Mapping__c/Reviewer_Mapping__c.object-meta.xml
<CustomObject>
    <label>Reviewer Mapping</label>
    <nameField>
        <displayFormat>RM-{000}</displayFormat>
        <label>Reviewer Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviewer Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>