force-app/main/default/objects/Reviewer_Mapping__c/fields/Conflict_Exist_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Exist_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I have affiliation or/and financial connection with the institution or applicant(s) of a specific proposal/project that might be construed as a conflict of interest. I wish to decline to evaluate the proposal (please provide the project/grant number).</inlineHelpText>
    <label>Conflict Exist Checkbox</label>
    <type>Checkbox</type>
</CustomField>