force-app/main/default/objects/Reviewer_Mapping__c/fields/Conflict_Reason__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Reason__c</fullName>
    <label>Conflict Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>