force-app/main/default/objects/Reviewer_Mapping__c/fields/Conflict_Status__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Status__c</fullName>
    <label>Conflict Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conflict Exists</fullName>
            </value>
            <value>
                <fullName>No Conflict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>