force-app/main/default/objects/Reviewer_Mapping__c/fields/Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate) + 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline Date</label>
    <type>Date</type>
</CustomField>