force-app/main/default/objects/Reviewer_Mapping__c/fields/Escalation_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation Task Created</label>
    <type>Checkbox</type>
</CustomField>