force-app/main/default/objects/Reviewer_Mapping__c/fields/Evaluation_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Submission_Date__c</fullName>
    <label>Evaluation Submission Date</label>
    <type>Date</type>
</CustomField>