force-app/main/default/objects/Reviewer_Mapping__c/fields/Grant_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Grant_Member_Status__c</fullName>
    <label>Grant Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>