force-app/main/default/objects/Reviewer_Mapping__c/fields/Invitation_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invitation Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>