force-app/main/default/objects/Reviewer_Mapping__c/fields/Invitation_Responded__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invitation Responded</label>
    <type>Checkbox</type>
</CustomField>