force-app/main/default/objects/Reviewer_Mapping__c/fields/Invitation_Responded_Date__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Responded_Date__c</fullName>
    <label>Invitation Responded Date</label>
    <type>Date</type>
</CustomField>