force-app/main/default/objects/Reviewer_Mapping__c/fields/Invitation_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Sent_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invitation Sent Date</label>
    <type>Date</type>
</CustomField>