force-app/main/default/objects/Reviewer_Mapping__c/fields/Methodology_Approach__c.field-meta.xml
<CustomField>
    <fullName>Methodology_Approach__c</fullName>
    <label>Methodology &amp; Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>