force-app/main/default/objects/Reviewer_Mapping__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reviewer Mapping</relationshipLabel>
    <relationshipName>Reviewer_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>