force-app/main/default/objects/Reviewer_Mapping__c/fields/Overall_Assessment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Overall_Assessment_Comments__c</fullName>
    <label>Overall Assessment Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>