force-app/main/default/objects/Reviewer_Mapping__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <label>Overall Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>