force-app/main/default/objects/Reviewer_Mapping__c/fields/Peer_Evaluation_Done__c.field-meta.xml
<CustomField>
    <fullName>Peer_Evaluation_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peer Evaluation Done</label>
    <type>Checkbox</type>
</CustomField>