force-app/main/default/objects/Reviewer_Mapping__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Reviewer Mapping</relationshipLabel>
    <relationshipName>Reviewer_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>