force-app/main/default/objects/Reviewer_Mapping__c/fields/Reason_for_conflict__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_conflict__c</fullName>
    <label>Reason for conflict</label>
    <type>TextArea</type>
</CustomField>