force-app/main/default/objects/Reviewer_Mapping__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>Reviewer__c</referenceTo>
    <relationshipLabel>Reviewer Mapping</relationshipLabel>
    <relationshipName>Reviewer_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>