force-app/main/default/objects/Reviewer_Mapping__c/fields/Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Name__c</fullName>
    <formula>TEXT(Reviewer__r.Title__c) + &apos; &apos; + Reviewer__r.First_Name__c +  &apos; &apos; + Reviewer__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reviewer Name</label>
    <type>Text</type>
</CustomField>