force-app/main/default/objects/Reviewer_Mapping__c/fields/Reviewer_Type__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Type__c</fullName>
    <formula>TEXT( Reviewer__r.Reviewer_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reviewer Type</label>
    <type>Text</type>
</CustomField>