force-app/main/default/objects/Reviewer_Mapping__c/fields/Scientific__c.field-meta.xml
<CustomField>
    <fullName>Scientific__c</fullName>
    <label>Scientific Merit &amp; Originality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>