force-app/main/default/objects/Reviewer_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Proposal_Id__c</columns>
    <columns>Proposal__c</columns>
    <columns>Status__c</columns>
    <columns>Reviewer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>