force-app/main/default/objects/Reviewer_Mapping__c/listViews/International_Reviewer_Mapping_Records.listView-meta.xml
<ListView>
    <fullName>International_Reviewer_Mapping_Records</fullName>
    <columns>NAME</columns>
    <columns>Application_Stages__c</columns>
    <columns>Deadline_Date__c</columns>
    <columns>Reviewer__c</columns>
    <columns>Proposal_Id__c</columns>
    <columns>Scheme_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reviewer_Type__c</field>
        <operation>equals</operation>
        <value>International</value>
    </filters>
    <label>International Reviewer Mapping Records</label>
</ListView>